--- a/src/scss/pages/_importer.scss
+++ b/src/scss/pages/_importer.scss
@@ -1,4 +1,5 @@
 @import '../../views/pages/home/_home.scss';
+@import '../../views/pages/events/events';
 @import '../../views/pages/news/blog.scss';
 @import '../../views/pages/news/news.scss';
 @import '../../views/pages/people/_people.scss';
