--- a/src/views/pages/events/rocky/rocky.njk
+++ b/src/views/pages/events/rocky/rocky.njk
@@ -1,3 +1,18 @@
 {% from "pages/events/template.njk" import eventPage %}
 
-{{ eventPage("Rocky Bioinformatics Conference", "rocky") }}
+{% set event = {
+    img: 'assets/img/events/Rocky_2018/IMG_1335.JPG',
+    location: '130 Wood Road, Snowmass Village, CO',
+    date: 'Dec 5-7, 2018',
+    media: [
+      'assets/img/events/Rocky_2018/IMG_1390.JPG',
+      'assets/img/events/Rocky_2018/IMG_1413.jpg',
+      'assets/img/events/Rocky_2018/IMG_1417.jpg',
+      'assets/img/events/Rocky_2018/IMG_1437.JPG',
+      'assets/img/events/Rocky_2018/IMG_1438.JPG',
+      'assets/img/events/Rocky_2018/IMG_1454.JPG'
+    ]
+  }
+%}
+
+{{ eventPage("Rocky Bioinformatics Conference", "rocky", event) }}
