--- a/src/views/pages/events/osucup/osucup.njk
+++ b/src/views/pages/events/osucup/osucup.njk
@@ -1,3 +1,16 @@
 {% from "pages/events/template.njk" import eventPage %}
 
-{{ eventPage("Won President's Cup at OSU", "osucup") }}
+{% set event = {
+    img: 'assets/img/events/OSU-President\'s Cup Dec2013//11310703416_5d39f89a49.png',
+    location: '246 Noble Research Center, Stillwater, OK',
+    date: 'Dec 10, 2013',
+    media: [
+      'assets/img/events/OSU-President\'s Cup Dec2013/11310660485_07cd6a9c5e.png',
+      'assets/img/events/OSU-President\'s Cup Dec2013/11310786163_7acfbcb421.png',
+      'assets/img/events/OSU-President\'s Cup Dec2013/11310788173_cf1bb74f31.png',
+      'assets/img/events/OSU-President\'s Cup Dec2013/11310793203_26b733e261.png'
+    ]
+  }
+%}
+
+{{ eventPage("Won President's Cup at OSU", "osucup", event) }}
