--- a/src/views/pages/home/_home.scss
+++ b/src/views/pages/home/_home.scss
@@ -12,3 +12,25 @@
     font-size: 110%;
   }
 }
+
+.home-news-item {
+  .hn-header {
+    font-size: 107%!important;
+    font-weight: $font-weight-heavy;
+    color: $color-text-main!important;
+    transition: $time-mid;
+
+    &.shrink {
+      line-height: 103%!important;
+    }
+
+    &:hover {
+      color: $color-primary!important;
+    }
+  }
+
+  .hn-date {
+    color: $color-text-soft!important;
+    font-style: italic;
+  }
+}
