Fixed video modal

--- a/src/views/pages/home/home.njk
+++ b/src/views/pages/home/home.njk
@@ -47,6 +47,9 @@
                 <img src="assets/img/rs_usu_winter.jpg" alt="" class="img-fluid">
               </a>
             </section>
+            <div class="modal fade" id="videoModal" tabindex="-1">
+              {% include "./video-modal.njk" %}
+            </div>
             <section class="px-4">
               <div class="kbl-heading text-center remarkable">Dr. Kaundal's Remarkable Journey</div>
               <p class="kbl-text text-center">
