--- a/src/scss/_colors.scss
+++ b/src/scss/_colors.scss
@@ -1,9 +1,11 @@
 // $color-primary: #d400ff;
 $color-primary-dark: #980f23;
 $color-primary: #bb1a31;
-$color-primary-light: #d13249;
+$color-primary-light: #d73e55;
 $color-primary-very-light: #f17789;
 $color-primary-bg: rgba(#b91f2e,.18);
+
+$code-color: #ee316f;
 
 $color-border-gray: #d1d1d1;
 
