--- a/src/scss/pages/_importer.scss
+++ b/src/scss/pages/_importer.scss
@@ -1,6 +1,6 @@
+@import '../../views/pages/events/_events.scss';
 @import '../../views/pages/home/_home.scss';
-@import '../../views/pages/events/events';
 @import '../../views/pages/news/blog.scss';
 @import '../../views/pages/news/news.scss';
 @import '../../views/pages/people/_people.scss';
-@import '../../views/pages/publications/publications';
+@import '../../views/pages/publications/_publications.scss';
