--- a/src/views/universal/_footer.njk
+++ b/src/views/universal/_footer.njk
@@ -129,13 +129,13 @@
                 <div class="col-sm-8">
                     <div class="widget_black_studio_tinymce" id="black-studio-tinymce-4">
                         <div class="copyright">Copyright 2020 -
-                            <a href="/">KAABiL Lab</a>
+                            <a href="/" class="kbl-link">KAABiL Lab</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-sm-4 ">
                     <div class="powredby">Developed and managed by:
-                        <a href="/people/our-team">Kaundal Research Group</a>
+                        <a href="/people/our-team" class="kbl-link">Kaundal Research Group</a>
                     </div>
                 </div>
             </div>
