--- a/src/views/pages/help/run-local/run-local.njk
+++ b/src/views/pages/help/run-local/run-local.njk
@@ -16,7 +16,9 @@
           To get the website on your machine, first find a place you want to put it on your computer, and then run<br>
           <code>git clone git@github.com:MusicDev33/bioinformatics.git</code><br>
           Once you've cloned the repository, go into the 'bioinformatics' folder that was created and type
-          <code>npm install</code>. This will install all the NPM packages in that folder.
+          <code>npm install</code>. This will install all the NPM packages in that folder.<br>
+          You don't have to run it this time, but everytime you want to edit the website, you'll want to run <br>
+          <code>npm run update</code> to get all the new changes.
         </p>
 
         <p class="kbl-text text-thicc">
@@ -26,6 +28,21 @@
           <code>http://localhost:3000</code>
           (or <a href="http://localhost:3000" target="_blank" rel="noopener noreferrer" class="kbl-link">click here</a>)
           and you'll be able to see your changes. Just refresh the page when you make a change. Ctrl+R also refreshes web pages as well.
+        </p>
+
+        <p class="kbl-text text-thicc">
+          When you've made changes that you're satisfied with, you can use Ctrl+C to quit one of the processes running in one of
+          the terminals, use <code>git add -A</code> to stage all of your changes, and
+          <code>git commit -m "Your message here"</code> commit your changes. To push your changes
+          to the server, use <code>git push -u origin master</code> and now your changes are on the GitHub server!
+        </p>
+
+        <p class="kbl-text text-thicc">
+          Of course, the GitHub server is not <b>our</b> server. To add these changes to our server, log into the Guru cluster.
+          We use an internal tool called 'Boxidizer' to update our sites, which is prefixed with <code>bxz</code>.
+          Use the command<br>
+          <code>bxz update bioinformatics</code> and you're an authorized user, then all changes from the GitHub server will be
+          carried over to the HPC.
         </p>
       </div>
     </div>
