--- a/src/views/pages/home/the-team.njk
+++ b/src/views/pages/home/the-team.njk
@@ -6,8 +6,8 @@
                     <figure class="sabbi-thumlinepost-card-figure">
                         <img alt="" class="img-responsive img-thumpost" style="width: 557px; height: 360px;" src="assets/img/profile/RK_2.jpg">
                     </figure>
-                    <h2 class="entry-title" style="font-size: 15px;">Dr. Rakesh Kaundal</h2>
-                    <div class="card_st_fix">Rakesh is an Assistant Professor of Bioinformatics in the Department of Plants, Soils, and Climate at Utah State University,
+                    <h2 class="entry-title kbl-text" style="font-size: 15px;">Dr. Rakesh Kaundal</h2>
+                    <div class="card_st_fix kbl-text">Rakesh is an Assistant Professor of Bioinformatics in the Department of Plants, Soils, and Climate at Utah State University,
                     and is the Director of Bioinformatics Facility at the Center for Integrated BioSystems, USU. He also...
                         <ul class="pfofile-social list-unstyled list-inline">
                             <li class="d-inline">
@@ -21,8 +21,9 @@
                               </a>
                             </li>
                         </ul>
-                        <div class="action-wrap" style="padding-bottom: 15px;"><a href="/people/rakesh"
-                                class=" btn-unsolemn btn-action read-more">Read More</a></div>
+                        <div class="action-wrap" style="padding-bottom: 15px;">
+                          <a href="/people/rakesh" class="kbl-link thicc">Read More</a>
+                        </div>
                     </div>
                 </article>
             </div>
@@ -83,7 +84,7 @@
               {{ personCard("assets/img/profile/1.jpg", "Naveen Duhan", "PhD Student | PSC") }}
             </div>
         </div>
-        <div class="action-wrap text-right-sm">
+        <div class="action-wrap text-left-sm">
           <a href="/people/our-team" class="btn btn-unsolemn btn-action">View all</a>
         </div>
     </div>
