--- a/src/views/universal/_footer.njk
+++ b/src/views/universal/_footer.njk
@@ -1,144 +1,122 @@
-<footer class="section-footer mt_25">
-  <div class="container footer">
+<footer class="w-100 py-5">
+  <div class="container">
+    <div class="row">
+      <section class="col-4 footer-section">
         <div class="row">
-            <div class="col-sm-3">
-                <div class="footer-site-info">
-                    <header>
-                        <a class="footer-brand" href="/">
-                          <img alt="" class="img-responsive" src="assets/img/bioinfo_logoaa.png">
-                        </a>
-                    </header>
-                    <address>
-                        <h3 class="entry-title">Address</h3>
-                        <div class="address-entry">
-                            <p class="__adtext">Utah State University</p>
-                            <p class="__ad-num">4700 Old Main Hill</p>
-                            <p class="__ad-num">Logan, UT 84322-4700</p>
-                            <p class="__ad-num">United States of America</p>
-                        </div>
-                    </address>
-                    <footer class="contact-info">
-                        <h3 class="entry-title">Contact Information</h3>
-                        <p class="__ci_num">Call:
-                            <span>+1 (435) 797-4117</span></p>
-                        <p class="__ci_num">Fax:
-                            <span>+1 (435) 797-2766</span></p>
-                        <p class="__ci_num">Email:
-                            <span>rkaundal@usu.edu</span></p>
-                    </footer>
-                </div>
-            </div>
-            <div class="col-sm-5">
-                <div class="row">
-                    <div class="col-sm-5 col-sm-offset-2">
-                        <section class="widget widget_sec">
-                            <div class="widget-main">
-                                <h2 class="widget-title">Affiliations</h2>
-                                <ul class="list list-unstyled list-footer-nav">
-                                    <li class="footer_text">
-                                        <a href="https://psc.usu.edu/" target="_blank">Plants, Soils, & Climate</a>
-                                    </li>
-                                    <li class="footer_text">
-                                        <a href="https://biosystems.usu.edu/" target="_blank">CIB</a>
-                                    </li>
-                                    <li class="footer_text">
-                                        <a href="https://cs.usu.edu/" target="_blank">Computer Science</a>
-                                    </li>
-                                    <li class="footer_text">
-                                        <a href="http://caas.usu.edu/" target="_blank">CAAS</a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </section>
-                        <section class="widget widget_sec">
-                            <div class="widget-main">
-                                <h2 class="widget-title">People</h2>
-                                <ul class="list list-unstyled list-footer-nav">
-                                    <li class="footer_text">
-                                        <a href="/people/rakesh">Dr. Kaundal</a>
-                                    </li>
-                                    <li class="footer_text">
-                                        <a href="/people/our-team">Our Team</a>
-                                    </li>
-                                    <li class="footer_text">
-                                        <a href="/people/our-team">Alumni</a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </section>
-                    </div>
-                    <div class="col-sm-5">
-                        <section class="widget widget_sec">
-                            <div class="widget-main">
-                                <h2 class="widget-title">Publications</h2>
-                                <ul class="list list-unstyled list-footer-nav">
-                                    <li class="footer_text">
-                                        <a href="/publications/journal-articles">Journal Articles</a>
-                                    </li>
-                                    <li class="footer_text">
-                                        <a href="/publications/conferences">Conferences and Talks</a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </section>
-                    </div>
-                </div>
-            </div>
-            <!-- Bug caused by CSS in pages -->
-            <div class="col-sm-4">
-                <div class="footer-site-info">
-                    <address>
-                        <h3 class="entry-title">Latest Events</h3>
-                        <ul class="event-list list-unstyled">
-                            <li class="lst_news_item">
-                                <h4 class="title">
-                                    <a href="/events">PSC Showcase</a>
-                                </h4>
-                                <div>
-                                    <span class="date">March 23, 2019</span>
-                                </div>
-                            </li>
-                            <li class="lst_news_item">
-                                <h4 class="title">
-                                    <a href="events">Rocky Bioinformatics Conference</a>
-                                </h4>
-                                <div>
-                                    <span class="date">December 5-7, 2018</span>
-                                </div>
-                            </li>
-                            <li class="lst_news_item">
-                                <h4 class="title">
-                                    <a href="events">Won President's Cup at OSU</a>
-                                </h4>
-                                <div>
-                                    <span class="date">December 10, 2013</span>
-                                </div>
-                            </li>
-                        </ul>
-                        <div class="action-wrap">
-                            <a href="events" class="btn btn-unsolemn btn-action">View all Events</a>
-                        </div>
-                    </address>
-                </div>
-            </div>
+          <div class="col-10">
+            <a href="/">
+              <img class="img-fluid" src="assets/img/bioinfo_logoaa.png" />
+            </a>
+          </div>
         </div>
-    </div>
-    <div id="site-footer-bar" class="footer-bar mt_30">
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-8">
-                    <div class="widget_black_studio_tinymce" id="black-studio-tinymce-4">
-                        <div class="copyright">Copyright 2020 -
-                            <a href="/" class="kbl-link">KAABiL Lab</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-4 ">
-                    <div class="powredby">Developed and managed by:
-                        <a href="/people/our-team" class="kbl-link">Kaundal Research Group</a>
-                    </div>
-                </div>
-            </div>
+        <h5 class="kbl-heading pt-3">Address</h5>
+        <div class="kbl-text">Utah State University</div>
+        <div class="kbl-text">4700 Old Main Hill</div>
+        <div class="kbl-text">Logan, UT 84322-4700</div>
+        <div class="kbl-text">United States of America</div>
+
+        <h5 class="kbl-heading pt-4">Contact Information</h5>
+        <div class="kbl-text">Phone: +1 (435) 797-4117</div>
+        <div class="kbl-text">Fax: +1 (435) 797-2766</div>
+        <div class="kbl-text">Email: rkaundal@usu.edu</div>
+      </section>
+
+      <section class="col pt-3">
+        <h5 class="kbl-heading pb-3">Affiliations</h5>
+        <div class="my-2">
+          <a href="https://psc.usu.edu/" target="_blank" rel="noopen noreferrer" class="footer-link">
+            Plants, Soils & Climate
+          </a>
         </div>
+        <div class="my-2">
+          <a href="https://biosystems.usu.edu/" target="_blank" rel="noopen noreferrer" class="footer-link">
+            CIB
+          </a>
+        </div>
+        <div class="my-2">
+          <a href="https://cs.usu.edu/" target="_blank" rel="noopen noreferrer" class="footer-link">
+            Computer Science
+          </a>
+        </div>
+        <div class="my-2">
+          <a href="http://caas.usu.edu/" target="_blank" rel="noopen noreferrer" class="footer-link">
+            CAAS
+          </a>
+        </div>
+
+        <h5 class="kbl-heading py-3">People</h5>
+        <div class="my-2">
+          <a href="people/rakesh" target="_blank" rel="noopen noreferrer" class="footer-link">
+            Dr. Kaundal
+          </a>
+        </div>
+        <div class="my-2">
+          <a href="people/our-team" target="_blank" rel="noopen noreferrer" class="footer-link">
+            Our Team
+          </a>
+        </div>
+        <div class="my-2">
+          <a href="people/alumni" target="_blank" rel="noopen noreferrer" class="footer-link">
+            Alumni
+          </a>
+        </div>
+      </section>
+
+      <section class="col pt-3">
+        <h5 class="kbl-heading pb-3">Publications</h5>
+        <div class="my-2">
+          <a href="publications" target="_blank" rel="noopen noreferrer" class="footer-link">
+            Journal Articles
+          </a>
+        </div>
+        <div class="my-2">
+          <a href="publications/conferences" target="_blank" rel="noopen noreferrer" class="footer-link">
+            Conferences and Talks
+          </a>
+        </div>
+      </section>
+
+      <section class="col-4 pt-3 footer-section">
+        <h5 class="kbl-heading pb-3">Latest Events</h5>
+
+        <div class="my-3">
+          <a href="events/winter" target="_blank" rel="noopen noreferrer" class="footer-link thicc">
+            Utah State University Winter
+          </a>
+          <div class="kbl-text soft">December 1, 2019</div>
+        </div>
+
+        <div class="my-3">
+          <a href="events/cricket" target="_blank" rel="noopen noreferrer" class="footer-link thicc">
+            Cricket in Utah
+          </a>
+          <div class="kbl-text soft">July 13, 2019</div>
+        </div>
+
+        <div class="my-3">
+          <a href="events/psc" target="_blank" rel="noopen noreferrer" class="footer-link thicc">
+            PSC Showcase
+          </a>
+          <div class="kbl-text soft">March 23, 2019</div>
+        </div>
+
+        <div class="my-4">
+          <a href="events" target="_blank" rel="noopen noreferrer" class="footer-link thicc">
+            View All
+          </a>
+        </div>
+      </section>
     </div>
+  </div>
 </footer>
+
+<section class="container my-3">
+  <div class="row">
+    <div class="col-6 footer-bottom-text">
+      <span class="kbl-text">Copyright 2020 - </span><a href="/" class="kbl-link">KAABiL Lab</a>
+    </div>
+    <div class="col-6 text-right footer-bottom-text">
+      <span class="kbl-text">Developed and managed by </span><a href="people/our-team" class="kbl-link">Kaundal Research Group</a>
+    </div>
+  </div>
+</section>
